 + Battalion: Minor message and visual improvements
 + Battalion: Mutate hog hats by default, but not the names
 + Battalion: Script parameter “mutatenames=true” to also change the hog names (default: false)
 + Battalion (King Mode): Kings always wear crowns and non-kings don't, regardless of settings
 + Battalion (King Mode): If the king dies, the hogs die normally instead of disappearing
 * Battalion: Some texts in the mission panel were wrong and misleading
 * Construction Mode: Remove drill strike if added by weapon scheme (it's broken)

A Space Adventure:
 + Precise Shooting: Display collected ammo
 + Hard Flying: Display personal best at mission start
 + Killing the Specialists: Add event messages and graphical effects
 * Killing the Specialists: Fix very misleading hints in mission panel
 * Killing the Specialists: Fix number of rounds measured being way too low

A Classic Fairytale:
 + Mission 3: Display number of turns left at timed parcours
 * Fix incorrect storytelling in mission descriptions

Theme customization:
 + Add fallback music with fallback-music and fallback-sd-music
 * Fix green color channel on themes with sd-tint

Lua API:
 + New call: WriteLnToChat(string): Add a line in the chat
 + New call: SetVampiric(bool): Toggle vampirism
 + New call: SetLaserSight(bool): Toggle laser sight
 + New call: GetWind(): Returns current wind (approximation) from -100 to 100
 + New call: GetTeamName(teamIdx): Returns name of team with given index (starts at 0)
 + New call: GetTeamIndex(teamname): Returns index of team with given name
 + New call: GetTeamClan(teamname): Returns clan of team with given name
 + New call: SpawnSupplyCrate(x, y, content, [, amount]): Spawn ammo or utility crate, depending on content
 + New call: HealHog(gearUid, healthBoost[, showMessage[, tint]]): Heal hedgehog with graphical effects and message
 + New call: SetTeamLabel(teamname[, label]): Set an arbitrary label for a team, will be displayed next to the team bar