@@ -85,6 +85,7 @@ AmmoSchemeModel::AmmoSchemeModel(QObject* parent, const QString & directory) :
                          << "Thinking with Portals"
                          << "King Mode"
                          << "Construction Mode"
+                         << "Space Invasion"
                          << "HedgeEditor"
                          ;
 
@@ -617,9 +618,57 @@ AmmoSchemeModel::AmmoSchemeModel(QObject* parent, const QString & directory) :
             << QVariant()              // scriptparam    43
             ;
 
+    QList<QVariant> spaceinvasion;
+    spaceinvasion
+            << predefSchemesNames[11]  // name           0
+            << QVariant(false)         // fortsmode      1
+            << QVariant(false)         // team divide    2
+            << QVariant(false)         // solid land     3
+            << QVariant(false)         // border         4
+            << QVariant(false)         // low gravity    5
+            << QVariant(false)         // laser sight    6
+            << QVariant(false)         // invulnerable   7
+            << QVariant(false)         // reset health   8
+            << QVariant(false)         // vampiric       9
+            << QVariant(false)         // karma          10
+            << QVariant(false)         // artillery      11
+            << QVariant(true)          // random order   12
+            << QVariant(false)         // king           13
+            << QVariant(false)         // place hog      14
+            << QVariant(false)         // shared ammo    15
+            << QVariant(true)          // disable girders 16
+            << QVariant(false)         // disable land objects 17
+            << QVariant(false)         // AI survival    18
+            << QVariant(false)         // inf. attack    19
+            << QVariant(false)         // reset weps     20
+            << QVariant(false)         // per hog ammo   21
+            << QVariant(false)         // no wind        22
+            << QVariant(false)         // more wind      23
+            << QVariant(false)         // tag team       24
+            << QVariant(false)         // bottom border  25
+            << QVariant(100)           // damage modfier 26
+            << QVariant(45)            // turn time      27
+            << QVariant(100)           // init health    28
+            << QVariant(50)            // sudden death   29
+            << QVariant(0)             // case prob      30
+            << QVariant(3)             // mines time     31
+            << QVariant(0)             // mines number   32
+            << QVariant(0)             // mine dud pct   33
+            << QVariant(0)             // explosives     34
+            << QVariant(0)             // air mines      35
+            << QVariant(0)             // health case pct 36
+            << QVariant(25)            // health case amt 37
+            << QVariant(0)             // water rise amt 38
+            << QVariant(0)             // health dec amt 39
+            << QVariant(100)           // rope modfier   40
+            << QVariant(100)           // get away time  41
+            << QVariant(0)             // world edge     42
+            << QVariant()              // scriptparam    43
+            ;
+
     QList<QVariant> hedgeeditor;
     hedgeeditor
-            << predefSchemesNames[11]  // name           0
+            << predefSchemesNames[12]  // name           0
             << QVariant(false)         // fortsmode      1
             << QVariant(false)         // team divide    2
             << QVariant(false)         // solid land     3
@@ -678,6 +727,7 @@ AmmoSchemeModel::AmmoSchemeModel(QObject* parent, const QString & directory) :
     schemes.append(thinkingportals);
     schemes.append(kingmode);
     schemes.append(construction);
+    schemes.append(spaceinvasion);
     schemes.append(hedgeeditor);
 
     if (!QDir(cfgdir->absolutePath() + "/Schemes").exists()) QDir().mkdir(cfgdir->absolutePath() + "/Schemes");
