@@ -38,6 +38,7 @@ Styles and game modes:
  + Battalion: Script parameter “mutatenames=true” to also change the hog names (default: false)
  + Battalion (King Mode): Kings always wear crowns and non-kings don't, regardless of settings
  + Battalion (King Mode): If the king dies, the hogs die normally instead of disappearing
+ + Space Invasion: Add a default Space Invasion game scheme
  * Battalion: Some texts in the mission panel were wrong and misleading
  * Construction Mode: Remove drill strike if added by weapon scheme (it's broken)
 
